# awscrd

./: README.md  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
awscrd/: conf.py  main.py  parse.py  sts.py  write.py
test/: test_awscrd.py  test_parse.py  test_sts.py
tests/: test_parse.py
tests/data/: test_creds
